Fix channel problem introduced with multi-channel-collapse patch

--- a/src/components/Chat/Chat.styl
+++ b/src/components/Chat/Chat.styl
@@ -52,6 +52,8 @@ channel-width=12rem;
         user-select: none;
     }
     .all-channels {
+        display: flex;
+        flex-direction:column;
         height: "calc(100vh - %s - %s)" % (navbar-height channel-utils-height);
         overflow-y: auto;
     }
